# nodes-frontend

./: .env.example  .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  configure.sh  couple.sh
docs/: 0.requirements.md  1.high-level.md  2.design.md
examples/binary_tree/: binary_tree.cpp  compile.sh
examples/graph/: compile.sh  graph.cpp
examples/linked_list/: compile.sh  linked_list.cpp
include/: AbstractShape.hpp  Action.hpp  ActionObservable.hpp  ActionObserver.hpp  Algorithms.hpp  BinaryTreeNode.hpp  Cache.hpp  Callbacks.hpp  CircleShape.hpp  Clickable.hpp  Connector.hpp  Container.hpp  DoubleLinkedListNode.hpp  DoublyLinkedListNode.hpp  Draggable.hpp  Edge.hpp  Entity.hpp  EntityFlags.hpp  EventFlags.hpp  EventType.hpp  Flags.hpp  FontFlags.hpp  GL_Triangle.hpp  GenericAPINode.hpp  GenericNode.hpp  GraphNode.hpp  Label.hpp  Line.hpp  LinkedListNode.hpp  LoopFlags.hpp  MainScene.hpp  Mouse.hpp  MouseCache.hpp  Node.hpp  NodeFrontEnd.hpp  NodeFrontEndWrapper.hpp  NodeImpl.hpp  Observable.hpp  OrientedEdge.hpp  OrientedGraphNode.hpp  (+14 more)
src/: CMakeLists.txt  Cache.cpp  main.cpp  main.hpp
src/api/: CMakeLists.txt  LinkedListNode.cpp  Node.cpp  NodeFrontEnd.cpp  NodeFrontEndWrapper.cpp
src/entities/: CMakeLists.txt  Connector.cpp  Container.cpp  Edge.cpp  Label.cpp  Node.cpp  NodeImpl.cpp  OrientedEdge.cpp  WeightedEdge.cpp  WeightedOrientedEdge.cpp  _Node.cpp
src/helpers/: CMakeLists.txt  Flags.cpp  FontFlags.cpp  LoopFlags.cpp  utils.cpp
src/mouse/: CMakeLists.txt  MouseCache.cpp
src/properties/: CmakeLists.txt  Draggable.cpp
src/scenes/: ActionObserver.cpp  CMakeLists.txt  MainScene.cpp  Scene.cpp  SceneSwitcher.cpp
src/scenes/actions/: ActionObservable.cpp  ActionObserver.cpp  CMakeLists.txt
src/shapes/: AbstractShape.cpp  CMakeLists.txt  CircleShape.cpp  GL_Triangle.cpp  Line.cpp
src/ui/: CMakeLists.txt  Overlay.cpp
